# deserve

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/: deserve.py
