[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "deserve"
authors = [{name = "Matías Battocchia", email = "battox@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/matiasbattocchia/deserve"
